--- a/Technical Documentation Page/styles.css
+++ b/Technical Documentation Page/styles.css
@@ -258,6 +258,7 @@ div#search i
     top: 0;
     padding: 0;
     margin: 0;
+    width: 100%;
     max-height: 240px;
     border-bottom: 5px solid rgb(71,71,71);
     z-index: 1;
@@ -265,6 +266,7 @@ div#search i
 
   #navbar header
   {
+    width: 100%;
     height: 80px;
   }
 
