--- a/Technical Documentation Page/styles.css
+++ b/Technical Documentation Page/styles.css
@@ -2,7 +2,7 @@ html, body
 {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   scroll-behavior: smooth;
   min-width: 290px;
   background-color: rgb(61,61,61);
@@ -53,8 +53,7 @@ html, body
   position: absolute;
   margin-left: 310px;
   padding: 80px;
-  margin-bottom: 110px;
-  font-size: 15px;
+  font-size: 17px;
 }
 
 #navbar ul
@@ -109,7 +108,7 @@ pre
 code
 {
   position: relative;
-  left: -100px;
+  left: -140px;
 }
 
 h2
@@ -158,8 +157,8 @@ div#search
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 26px;
-  margin-bottom: 29px;
+  margin-bottom: 50px;
+  margin-top: 10px;
   border-radius: 500px;
   border: solid 1px rgb(190, 190, 190);
   background: rgb(51, 51, 51);
@@ -255,6 +254,7 @@ div#search i
     top: 0;
     padding: 0;
     margin: 0;
+    width: 100%;
     max-height: 240px;
     border-bottom: 5px solid rgb(71,71,71);
     z-index: 1;
@@ -263,7 +263,7 @@ div#search i
   #navbar header
   {
     width: 75%;
-    height: 80px;
+    height: 70px;
   }
 
   #main-doc
@@ -271,18 +271,17 @@ div#search i
     position: relative;
     margin-left: 0px;
     margin-top: 240px;
-    padding: 0px;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
   }
 
   code
   {
     position: relative;
-    left: -140px;
+    left: -170px;
   }
-  #back-to-top
-  {
-    right : 10%;
-  } 
+
   #back-to-top span
   {
     color: rgba(0,0,0,0);
