--- a/Technical Documentation Page/styles.css
+++ b/Technical Documentation Page/styles.css
@@ -1,4 +1,9 @@
-html, body
+html
+{
+  scroll-behavior: smooth;
+}
+
+body
 {
   margin: 0;
   padding: 0;
@@ -7,6 +12,11 @@ html, body
   min-width: 290px;
   background-color: rgb(61,61,61);
   color: white;
+}
+.light-mode
+{
+  background : rgb(250, 250, 250) !important;
+  color : rgb(61,61,61);
 }
 
 .selector
@@ -22,7 +32,26 @@ html, body
 {
   color: rgb(165, 71, 42);
 }
-#navbar {
+#faux-top
+{
+    position: absolute;
+    top: -400px;
+} 
+.nav-class-light
+{
+    background : rgb(250, 250, 250) !important;
+}
+
+.main-doc-light
+{
+    color: black !important;
+    background : rgb(250, 250, 250) !important;
+  
+}
+
+
+#navbar
+{
   position: fixed;
   min-width: 300px;
   background: rgb(61, 61, 61);
@@ -32,12 +61,14 @@ html, body
   height: 70%;
   border:none;
 }
+
+
 ::-webkit-scrollbar {
   width: 7px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #303030; 
+  background: rgba(141,141,141, 0.6); 
 }
  
 ::-webkit-scrollbar-thumb {
@@ -65,21 +96,29 @@ html, body
   padding-inline-start: 0;
 }
 
+.list-uo-light
+{
+  background : rgb(250, 250, 250) !important;
+}
+
 #navbar ul li
 {
   padding: 0;
   position: relative;
 }
-#navbar ul li a
+.nav-link
 {
   display: block;
   text-decoration: none;
   color: rgb(255, 255, 255);
   font-weight: bold;
   padding: 1.5em;
-
 }
-#navbar ul li a:hover
+.link-dark
+{
+  color: black;
+}
+.nav-link:hover
 {
   background-color: rgba(129, 155, 204,0.6);
   border-left: 5px solid rgb(104, 157, 255);
@@ -87,7 +126,7 @@ html, body
   transition: all 0.4s ease-in-out;
 }
 
-.change
+.link-active
 {
   background-color: rgba(129, 155, 204,0.6);
   border-left: 5px solid rgb(104, 157, 255);
@@ -101,8 +140,9 @@ p
 
 pre
 {
-  border-left: 3px solid rgb(109, 109, 109);
-  background-color: rgb(51, 51, 51);
+  border-left: 3px solid rgb(185, 185, 185);
+  background-color: rgb(82, 82, 82);
+  color: white;
 }
 
 code
@@ -127,7 +167,7 @@ section
   margin-bottom: 120px;
 }
 
-#top-nav
+body main nav
 {
   display: flex;
   background: rgba(61,61,61,0.8);
@@ -135,11 +175,18 @@ section
   justify-content: space-between;
   align-items: center;
 }
+
+.topnav-light
+{
+    background: rgb(250, 250, 250);
+}
 #top-nav img
 {
   height: 50px;
   width: 50px;
 }
+
+
 
 #box-model
 {
@@ -152,58 +199,79 @@ form
   justify-content: center;
 }
 
-div#search
+#search
 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 50px;
-  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;
   border-radius: 500px;
-  border: solid 1px rgb(190, 190, 190);
+  border: solid 2px rgb(190, 190, 190);
   background: rgb(51, 51, 51);
   padding: 1rem;
-  width: 280px;
+  width: 100px;
   height: 12px;
   min-width: 40%;
 }
 
-div#search input
+.search-light
+{
+    background : rgb(250, 250, 250) !important;
+    color: rgb(61, 61, 61) !important;
+    border: solid 2px rgb(71, 71, 71) !important;
+}
+
+#input-box
 { 
   height: 20px;
   background: rgb(51, 51, 51);
   color: white;
   outline: none;
-  font-size: 15px;
+  font-size: 12px;
   text-decoration: none;
   width: 95%;
   margin-right: 10px;
   border: none;
 }
 
-div#search i 
+.input-box-light
+{
+    color: rgb(61, 61, 61) !important;
+    background : rgb(250, 250, 250) !important;
+}
+
+#search-icon 
 {
   margin-right: 10px;
-  color: white;
 }
+
+
 
 #back-to-top
 {
   position: fixed;
   right: 5%;
-  bottom: 5%;
+  bottom: 10%;
   text-decoration: none;
   background: rgb(61, 61, 61);
   border-radius: 50%;
   z-index: 3;
   height: 45px;
   width: 45px;
+  color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
+}
+
+.back-to-top-dark
+{
+  background: rgb(250, 250, 250)!important ;
+  color: black !important;
 }
 
 #back-to-top i
 {
-  color: white;
+  
   padding: 1.0em;
 }
 
@@ -216,7 +284,7 @@ div#search i
 
 #back-to-top span:hover
 {
-  color: white;
+  color: rgb(148, 148, 148);
   transition: all 0.4s ease-in-out ;
 }
 
@@ -224,7 +292,7 @@ div#search i
 {
   width: 150px;
   border-radius: 20px;
-  transition: all 0.4s ease-in-out ;
+  transition: all 0.3s ease-in-out ;
 }
 
 #What_Next ol li
@@ -234,7 +302,7 @@ div#search i
 
 #What_Next ol li a
 {
-  color: white;
+  color:rgb(177, 177, 177);
 }
 
 .switch {
@@ -290,7 +358,6 @@ input:checked + .slider:before {
 
 
 .slider.round {
-  border: 0.2px solid white;
   border-radius: 34px;
 }
 
@@ -298,13 +365,42 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+#theme
+{
+  display : flex;
+  Justify-content : space-evenly;
+  align-items : center ;
+ } 
+
+.fa-sun,.fa-moon
+{
+  width: 10px;
+  height : 10px;
+  padding : 10px;
+  margin-bottom : 5px;
+}
+
+.fa-sun
+{
+  color : rgb(255, 255, 88);
+  margin-right : 2px;
+}
+.fa-moon
+{
+  margin-left : -5px;
+} 
+
+.light-mode-nav
+{
+  background : rgb(250, 250, 250) !important;
+  color : rgb(61,61,61);
+} 
 
 @media only screen and (max-width: 815px) {
 
   #navbar ul
   {
-    height: 110px;
-    border-top: 5px solid rgb(71,71,71);
+    height: 100px;
   }
 
   #navbar
@@ -315,22 +411,28 @@ input:checked + .slider:before {
     padding: 0;
     margin: 0;
     width: 100%;
-    max-height: 240px;
-    border-bottom: 5px solid rgb(71,71,71);
+    max-height: 165px;
     z-index: 1;
   }
 
   #navbar header
   {
-    width: 75%;
-    height: 70px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+  }
+
+  #navbar header h1
+  {
+    margin-top: 40px;
   }
 
   #main-doc
   {
     position: relative;
     margin-left: 0px;
-    margin-top: 240px;
+    margin-top: 175px;
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
@@ -340,7 +442,7 @@ input:checked + .slider:before {
   code
   {
     position: relative;
-    left: -170px;
+    left: -150px;
   }
 
   #back-to-top span
@@ -359,11 +461,7 @@ input:checked + .slider:before {
   {
     margin-bottom: 50px;
   }
-
-  #navbar ul li a:hover
-  {
-    background-color: background-color: rgba(129, 155, 204,0.9) 
-  }
 }
+
 
 
