--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -67,10 +67,20 @@ body {
 }
 
 .skill-tile:hover .bg-text {
-  font-size: 100px;
-  opacity: 0.7;
+  font-size: 80px;
+  opacity: 0.4;
   -webkit-transition: 0.8s;
   transition: 0.8s;
+}
+
+.svg-icon {
+  position: relative;
+  top: 10px;
+  margin-bottom: 5px;
+}
+
+.svg-icon-dark {
+  fill: white;
 }
 
 .fa-code {
@@ -198,12 +208,13 @@ body {
       justify-content: space-around;
   padding: 1.5em;
   width: 40%;
+  text-transform: uppercase;
 }
 
 a {
   text-decoration: none;
   color: black;
-  font-size: 13px;
+  font-size: 12px;
   padding: 1em;
 }
 
@@ -376,10 +387,42 @@ section {
   text-transform: capitalize;
 }
 
+#welcome-inner-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 40%;
+  padding: 6em;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.hire-btn {
+  background-color: black;
+  border: 1px solid white;
+  padding: 0.8em;
+  color: white;
+  font-size: 15px;
+  font-weight: bolder;
+  width: 12%;
+}
+
+.hire-btn-dark {
+  background-color: #f0f0f0;
+  border: 1px solid #141414;
+  padding: 0.8em;
+  color: #141414;
+  width: 12%;
+}
+
 h1 {
   font-size: 40px;
-  padding: 2em;
-  width: 40%;
+  width: 100%;
 }
 
 /*Styling for about section*/
@@ -698,13 +741,35 @@ video::-webkit-media-controls {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  min-height: 400px;
   padding-bottom: 2em;
-  background-image: url(images/whitecard.jpg);
+  background-image: url(images/whitecard2.jpg);
+}
+
+#contact-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(138, 138, 138, 0.123);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border-radius: 10px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40%;
+  padding: 2em;
 }
 
 #contact-text {
   text-align: center;
-  width: 50%;
+  width: 80%;
   padding: 1.5em;
 }
 
@@ -718,7 +783,11 @@ video::-webkit-media-controls {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 30%;
+  width: 60%;
+}
+
+.profile-link {
+  display: none;
 }
 
 footer {
@@ -866,7 +935,8 @@ other classes overiding the dark mode declarations due to specificity*/
 
 .contact-dark {
   color: white;
-  background-image: url(images/blackcard.jpg);
+  background-image: url(images/blackcard2.jpg);
+  background-size: cover;
 }
 
 .footer-dark {
@@ -878,6 +948,16 @@ other classes overiding the dark mode declarations due to specificity*/
   p {
     font-size: 1em;
     text-align: center;
+  }
+  .svg-icon {
+    width: 2em;
+    height: 2em;
+    position: relative;
+    top: 0px;
+    margin-bottom: 0px;
+  }
+  .skill-tile:hover .bg-text {
+    font-size: 60px;
   }
   .fa-brands {
     font-size: 1.5em;
@@ -892,9 +972,20 @@ other classes overiding the dark mode declarations due to specificity*/
     left: 12%;
   }
   h1 {
-    width: 70%;
+    width: 80%;
     padding: 1em;
+    padding-left: 0;
     word-wrap: normal;
+  }
+  #welcome-inner-box {
+    width: 80%;
+    padding: 2em;
+  }
+  .hire-btn {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    width: 30%;
+    font-size: 1em;
   }
   .inner-title {
     font-size: 1.8em;
@@ -959,6 +1050,10 @@ other classes overiding the dark mode declarations due to specificity*/
     width: 60%;
     bottom: 0;
     padding: 1em;
+  }
+  #contact-card {
+    width: 70%;
+    margin: 1em;
   }
   #contact-text {
     width: 80%;
