--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -1,3 +1,17 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+:root {
+  --main-clr: rgb(124, 124, 124);
+  --nav-shadow: 0px 3px var(--main-clr);
+}
+
 p {
   font-size: 15px;
 }
@@ -91,7 +105,7 @@ body {
 }
 
 /*Styling for Navigation Bar*/
-#navbar {
+nav {
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,6 +120,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  padding: 1em;
   background-color: rgba(138, 138, 138, 0.123);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
@@ -147,6 +162,7 @@ body {
 
 #name {
   position: fixed;
+  top: 50%;
   -webkit-animation-name: text-slide;
           animation-name: text-slide;
   -webkit-animation-duration: 1.2s;
@@ -191,31 +207,124 @@ body {
   }
 }
 
-#links {
-  position: relative;
-  left: 15%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 1.5em;
-  width: 40%;
-  text-transform: uppercase;
-}
-
 a {
   text-decoration: none;
   color: black;
   font-size: 12px;
   padding: 1em;
+}
+
+nav ul {
+  --padding: 20px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  left: 12.5%;
+  width: 50%;
+  overflow-y: hidden;
+  -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
+  transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
+}
+
+nav ul li {
+  padding: var(--padding);
+}
+
+nav ul li a {
+  text-decoration: none;
+  position: relative;
+  width: 100%;
+  text-transform: uppercase;
+  color: #141414;
+  font-weight: 500;
+}
+
+/*nav ul li a::after {
+  content: "";
+  width: 0%;
+  height: 1.7px;
+  border-radius: 99px;
+  background: var(--main-clr);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s ease;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}*/
+nav .menu {
+  width: 22px;
+  height: 16px;
+  cursor: pointer;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  margin: 20px;
+}
+
+nav .menu span {
+  background: #3c3c3c;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
+#bar1 {
+  height: 2px;
+  width: 100%;
+}
+
+#bar2 {
+  height: 2px;
+  width: 70%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+#bar3 {
+  height: 2px;
+  width: 100%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+nav .menu.active span {
+  background: #3c3c3c;
+}
+
+nav .menu.active span:nth-child(1) {
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
+}
+
+nav .menu span:nth-child(3) {
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
+nav .menu.active span:nth-child(3) {
+  -webkit-transform: rotate(-40deg);
+          transform: rotate(-40deg);
+  width: 100%;
+}
+
+nav .menu.active span:nth-child(2) {
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 /*Styling for Theme Switch*/
@@ -234,26 +343,12 @@ a {
           transform: scale(0.8);
 }
 
-.fa-sun {
-  margin-right: 2px;
-}
-
-.fa-moon {
-  margin-left: -5px;
-}
-
-.fa-sun, .fa-moon {
-  width: 10px;
-  height: 10px;
-  padding: 10px;
-  margin-bottom: 5px;
-}
-
 .switch {
   position: relative;
   display: inline-block;
   width: 40px;
   height: 24px;
+  margin: 0.2em;
 }
 
 .switch input {
@@ -405,19 +500,17 @@ section {
 .hire-btn {
   background-color: black;
   border: 1px solid white;
-  padding: 0.8em;
+  padding: 1em;
   color: white;
   font-size: 15px;
   font-weight: bolder;
-  width: 12%;
+  width: 30%;
 }
 
 .hire-btn-dark {
   background-color: #f0f0f0;
   border: 1px solid #141414;
-  padding: 0.8em;
   color: #141414;
-  width: 12%;
 }
 
 h1 {
@@ -824,8 +917,8 @@ footer {
   background: whitesmoke;
   border-radius: 50%;
   z-index: 4;
-  height: 20px;
-  width: 20px;
+  height: 45px;
+  width: 45px;
   color: #282828;
   -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
@@ -843,10 +936,10 @@ footer {
 #back-to-top span {
   color: rgba(0, 0, 0, 0);
   border: none;
-  font-size: 14px;
+  font-size: 12px;
   text-decoration: none;
   position: relative;
-  left: 10px;
+  left: 5px;
   bottom: 5px;
 }
 
@@ -868,6 +961,10 @@ footer {
 other classes overiding the dark mode declarations due to specificity*/
 .link-dark {
   color: white;
+}
+
+.span-dark {
+  background-color: #f0f0f0 !important;
 }
 
 .welcome-dark {
@@ -962,11 +1059,38 @@ other classes overiding the dark mode declarations due to specificity*/
   .fa-brands {
     font-size: 1.5em;
   }
-  #navbar {
-    height: 10vh;
+  nav .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
-  #links {
-    display: none;
+  nav ul {
+    --height: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: rgba(138, 138, 138, 0.123);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 100%;
+    height: var(--height);
+    -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  }
+  nav ul.active {
+    --height: calc(
+          (((var(--padding) * 2) + (var(--font-size) * 1.5))) * var(--childenNumber)
+        );
+    -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  }
+  nav ul li {
+    width: 100%;
+    text-align: center;
   }
   #theme {
     left: 12%;
@@ -978,7 +1102,7 @@ other classes overiding the dark mode declarations due to specificity*/
     word-wrap: normal;
   }
   #welcome-inner-box {
-    width: 80%;
+    width: 100%;
     padding: 2em;
   }
   .hire-btn {
